VitalFlow/src/salesforce/force-app/main/default/objects/Hospital_Alert__c/Hospital_Alert__c.object-meta.xml
<CustomObject>
    <description>Tracks hospital alerts and actions triggered from VitalFlow dashboard</description>
    <label>Hospital Alert</label>
    <nameField>
        <displayFormat>ALERT-{0000}</displayFormat>
        <label>Alert Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hospital Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>