VitalFlow/src/salesforce/force-app/main/default/objects/Hospital_Alert__c/fields/Action_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Action_Timestamp__c</fullName>
    <description>When the action was triggered</description>
    <label>Action Timestamp</label>
    <type>DateTime</type>
</CustomField>