VitalFlow/src/salesforce/force-app/main/default/objects/Hospital_Alert__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <description>Type of action to be taken</description>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deploy Staff</fullName>
            </value>
            <value>
                <fullName>Divert Ambulance</fullName>
            </value>
            <value>
                <fullName>Request Equipment</fullName>
            </value>
            <value>
                <fullName>Emergency Protocol</fullName>
            </value>
            <value>
                <fullName>Capacity Overflow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>