VitalFlow/src/salesforce/force-app/main/default/objects/Hospital_Alert__c/fields/AI_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>AI_Recommendation__c</fullName>
    <description>AI-generated recommendation for this alert</description>
    <label>AI Recommendation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>