VitalFlow/src/salesforce/force-app/main/default/objects/Hospital_Alert__c/fields/Assigned_Staff__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Staff member assigned to handle this alert</description>
    <label>Assigned Staff</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Hospital_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>