VitalFlow/src/salesforce/force-app/main/default/objects/Hospital_Alert__c/fields/Available_Beds__c.field-meta.xml
<CustomField>
    <fullName>Available_Beds__c</fullName>
    <description>Number of beds currently available in the ward</description>
    <label>Available Beds</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>