VitalFlow/src/salesforce/force-app/main/default/objects/Hospital_Alert__c/fields/Occupancy_Percent__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Percent__c</fullName>
    <description>Current occupancy percentage of the ward</description>
    <label>Occupancy Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>