VitalFlow/src/salesforce/force-app/main/default/objects/Hospital_Alert__c/fields/Resolution_Notes__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Notes__c</fullName>
    <description>Notes about how the alert was resolved</description>
    <label>Resolution Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>