VitalFlow/src/salesforce/force-app/main/default/objects/Hospital_Alert__c/fields/Wait_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Wait_Time_Minutes__c</fullName>
    <description>Current wait time in minutes for this ward</description>
    <label>Wait Time (Minutes)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>