VitalFlow/src/salesforce/force-app/main/default/objects/Hospital_Alert__c/fields/Ward_Name__c.field-meta.xml
<CustomField>
    <fullName>Ward_Name__c</fullName>
    <description>Name of the hospital ward triggering this alert</description>
    <label>Ward Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>